--- a/src/main/resources/static/ProjectTask/index.html
+++ b/src/main/resources/static/ProjectTask/index.html
@@ -67,15 +67,15 @@
         </form>
     </div>
     <div class="deleteCardForm">
-        <form id="deleteForm">
-            <h2>Delete Card</h2>
-            <label for="deleteCardSelect">Select a Card to Delete:</label>
-            <select id="deleteCardSelect" name="deleteCardSelect">
-                <!-- Options will be populated dynamically using JavaScript -->
-            </select><br><br>
+<!--        <form id="deleteForm">-->
+<!--            <h2>Delete Card</h2>-->
+<!--            <label for="deleteCardSelect">Select a Card to Delete:</label>-->
+<!--            <select id="deleteCardSelect" name="deleteCardSelect">-->
+<!--                &lt;!&ndash; Options will be populated dynamically using JavaScript &ndash;&gt;-->
+<!--            </select><br><br>-->
 
-            <input type="submit" value="Delete">
-        </form>
+<!--            <input type="submit" value="Delete">-->
+<!--        </form>-->
     </div>
 </div>
 
