--- a/src/main/resources/static/Static/index.html
+++ b/src/main/resources/static/Static/index.html
@@ -66,7 +66,7 @@
             <input type="submit" value="Update">
         </form>
     </div>
-    <div class="deleteCardForm">
+<!--    <div class="deleteCardForm">-->
 <!--        <form id="deleteForm">-->
 <!--            <h2>Delete Card</h2>-->
 <!--            <label for="deleteCardSelect">Select a Card to Delete:</label>-->
@@ -76,7 +76,7 @@
 
 <!--            <input type="submit" value="Delete">-->
 <!--        </form>-->
-    </div>
+<!--    </div>-->
 </div>
 
 <!-- Include Axios library -->
