--- a/src/main/resources/static/Static/index.html
+++ b/src/main/resources/static/Static/index.html
@@ -66,17 +66,16 @@
             <input type="submit" value="Update">
         </form>
     </div>
-<!--    <div class="deleteCardForm">-->
-<!--        <form id="deleteForm">-->
-<!--            <h2>Delete Card</h2>-->
-<!--            <label for="deleteCardSelect">Select a Card to Delete:</label>-->
-<!--            <select id="deleteCardSelect" name="deleteCardSelect">-->
-<!--                &lt;!&ndash; Options will be populated dynamically using JavaScript &ndash;&gt;-->
-<!--            </select><br><br>-->
-
-<!--            <input type="submit" value="Delete">-->
-<!--        </form>-->
-<!--    </div>-->
+    <div class="deleteCardForm">
+        <form id="deleteForm">
+            <h2>Delete Card</h2>
+            <label for="deleteCardSelect">Select a Card to Delete:</label>
+            <select id="deleteCardSelect" name="deleteCardSelect">
+                <!-- Options will be populated dynamically using JavaScript -->
+            </select><br><br>
+            <input type="submit" value="Delete">
+        </form>
+    </div>
 </div>
 
 <!-- Include Axios library -->
